add_source( PUBLIC
    SRC
        Allocator.hpp
        AllocatorFixedSpace.hpp
        AllocatorHeap.hpp
        AutoResetFunction.hpp
        BitLogic.hpp
        BoundedDeque.hpp
        BoundedForwardList.hpp
        BoundedList.hpp
        BoundedPriorityQueue.hpp
        BoundedString.hpp
        BoundedString.cpp
        BoundedVector.hpp
        ByteRange.hpp
        CompareMembers.hpp
        CrcCcittCalculator.cpp
        CrcCcittCalculator.hpp
        CyclicBuffer.hpp
        Endian.hpp
        FixedPoint.hpp
        Function.cpp
        Function.hpp
        IntegerNormalization.hpp
        IntegerSequence.hpp
        InterfaceConnector.hpp
        IntrusiveBinarySearchTree.hpp
        IntrusiveForwardList.hpp
        IntrusiveList.hpp
        IntrusivePriorityQueue.hpp
        IntrusiveSet.hpp
        MemoryRange.hpp
        Observer.hpp
        Optional.cpp
        Optional.hpp
        PolymorphicVariant.hpp
        PostAssign.hpp
        ProxyCreator.hpp
        ReallyAssert.hpp
        ReferenceCountedSingleton.hpp
        ReverseRange.hpp
        Sequencer.cpp
        Sequencer.hpp
        SharedObjectAllocator.hpp
        SharedObjectAllocatorFixedSize.hpp
        SharedObjectAllocatorHeap.hpp
        SharedOptional.hpp
        SharedOwnedObserver.hpp
        SharedPtr.cpp
        SharedPtr.hpp
        StaticStorage.hpp
        Tokenizer.cpp
        Tokenizer.hpp
        Unit.hpp
        VariadicTemplates.hpp
        Variant.hpp
        VariantDetail.hpp
        WithStorage.hpp
)

add_subdirectory(ext)


add_subdirectory(test)
add_subdirectory(test_helper)
